--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,14 +2,18 @@
 %html
   %head
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
-    %title= content_for?(:title) ? yield(:title) : 'Marvindanig'
-    %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Marvindanig'}"}
+    %title= content_for?(:title) ? yield(:title) : 'Marvin Danig'
+    %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Marvin Danig'}"}
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
+  
+
   %body
     %header
       = render 'layouts/navigation'
-    %main{:role => "main"}
+    %main.container{:role => "main"}
       = render 'layouts/messages'
       = yield
+
+
