--- a/app/assets/stylesheets/twitter_bootstrap.css.scss
+++ b/app/assets/stylesheets/twitter_bootstrap.css.scss
@@ -1,10 +1,10 @@
 
 
 // First import Bootswatch theme variables http://bit.ly/KIu8IN
-@import 'bootswatch/spacelab/variables';
+//@import 'bootswatch/spacelab/variables';
 
 // Use Twitter Bootstrap
-@import 'bootstrap';
+//@import 'bootstrap';
 
 // And finally Bootswatch style
-@import "bootswatch/spacelab/bootswatch"
+//@import "bootswatch/spacelab/bootswatch"
