--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -1,8 +1,4 @@
-= content_for :title do 
-  Marvin Danig | Magazines | Rails | Javascript 
+= provide(:title,'Code | Life | Magazines | Rails | Javascript | Style')
+   
 
-%h1.text-center Boy, you got here first!
-%p.text-center 
-  Send me a business
-  = succeed '.' do
-    = mail_to 'marvin@marvindanig.com', 'note'
+%h1.text-center Hello papagena!
