Fixing capfile and Gemfile

--- a/app/views/widgets/header/_menu.html.haml
+++ b/app/views/widgets/header/_menu.html.haml
@@ -1,14 +1,14 @@
 %ul.horizontal-list.left.navi-menu
+  %li
+    = link_to 'Resumé', page_path('about'), :class => 'transience'
   %li.hide-on-mobiles
-    = link_to 'About', page_path('about'), :class => 'transience'
-  %li.hide-on-mobiles
-    = link_to 'Work', page_path('work'), :class => 'transience'
+    = link_to 'I / O', page_path('work'), :class => 'transience'
 
 %ul.horizontal-list.right.navi-menu
   %li.hide-on-mobiles
-    %a.transience{href: 'http://marvindanig.svbtle.com/' } Thoughts 
-  %li.hide-on-mobiles
-    %a.transience{href: 'https://bubbl.in/marvin-marvin-danig' } Experiments 
+    %a.transience{href: 'http://marvindanig.svbtle.com/' } Logs 
+  %li
+    %a.transience{href: 'https://bubbl.in/marvin-marvin-danig' } Books
 
 
   
