Adding blog and bubblin to portfolio

--- a/app/views/widgets/header/_menu.html.haml
+++ b/app/views/widgets/header/_menu.html.haml
@@ -2,13 +2,15 @@
   %li
     = link_to 'Resumé', page_path('about'), :class => 'transience'
   %li.hide-on-mobiles
-    = link_to 'I / O', page_path('work'), :class => 'transience'
+    = link_to 'Business', page_path('work'), :class => 'transience'
 
 %ul.horizontal-list.right.navi-menu
   %li.hide-on-mobiles
-    %a.transience{href: 'http://marvindanig.svbtle.com/' } Logs 
+    %a.transience{href: 'http://marvindanig.svbtle.com/' } Essays 
   %li
     %a.transience{href: 'https://bubbl.in/marvin-marvin-danig' } Books
+  %li
+    = link_to 'Experiments', page_path('experiments'), :class => 'transience'
 
 
   
