--- a/app/views/widgets/header/_header.html.haml
+++ b/app/views/widgets/header/_header.html.haml
@@ -1,4 +1,4 @@
-%header.mast.fixed.top.bar-line
+%header.mast.fixed.bottom.bar-line
   %nav.bar.left.white
     = render :partial => "widgets/header/logo"
     = render :partial => "widgets/header/menu"
