--- a/app/views/widgets/header/_menu.html.haml
+++ b/app/views/widgets/header/_menu.html.haml
@@ -2,7 +2,7 @@
   %li
     = link_to 'Resumé', page_path('about'), :class => 'transience'
   %li.hide-on-mobiles
-    = link_to 'Business', page_path('work'), :class => 'transience'
+    = link_to 'Contact', page_path('work'), :class => 'transience'
 
 %ul.horizontal-list.right.navi-menu
   %li
