--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 
     = render :partial => "widgets/header/header" # <Header Tag>
-    .container.center
+    .container.flex.center
       = yield # <Main tag for content>
 
     / - unless params[:controller] == 'books'
