--- a/app/views/widgets/header/_logo.html.haml
+++ b/app/views/widgets/header/_logo.html.haml
@@ -1,2 +1,2 @@
-%a.element.logo.left{href: root_path, role: 'Marvin Danig' } Marvin Danig
+%a.element.logo.left.lobster{href: root_path, role: 'Marvin Danig' } Marvin Danig's ...
 
