Adding analytics to marvindanig.com

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,5 +12,5 @@
     / - unless params[:controller] == 'books'
     /   = render :partial => "widgets/footer/footer" # <footer tag>
 
-    / = render :partial => "widgets/scripts/body_javascript_manager" # <Body scripts>
+    = render :partial => "widgets/scripts/body_javascript_manager" # <Body scripts>
 
