--- a/app/views/widgets/head/_html_head.html.haml
+++ b/app/views/widgets/head/_html_head.html.haml
@@ -31,9 +31,10 @@
   / CSS  
   / TODO: Move this into a style manager.
   %link{:href => "https://fonts.googleapis.com/css?family=Raleway", :rel => "stylesheet", :type => "text/css"}/
-  %link{:href => "https://fonts.googleapis.com/css?family=Lobster", :rel => "stylesheet", :type => "text/css"}/
   %link{:href => "https://fonts.googleapis.com/css?family=Tangerine", :rel => "stylesheet", :type => "text/css"}/
+  %link{:href => "https://fonts.googleapis.com/css?family=Lobster", :rel => "stylesheet", :type => "text/css"}/
   %link{:href => "https://fonts.googleapis.com/css?family=Roboto:400,900", :rel => "stylesheet", :type => "text/css"}/
+  %link{:href => "https://fonts.googleapis.com/css?family=Comfortaa:400,300", :rel => "stylesheet", :type => "text/css"}/
   
   = stylesheet_link_tag 'application', media: :all, 'data-turbolinks-track' => true
 
