Getting the site in shape

--- a/app/assets/stylesheets/scss/_cut_corners.scss
+++ b/app/assets/stylesheets/scss/_cut_corners.scss
@@ -43,3 +43,5 @@
   border-top-left-radius: .6em;
   border-bottom-left-radius: .6em;
 }
+
+.circular{ border-radius: 50%; height: 100px; width:100px;}
