--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,3 +1,16 @@
 = provide(:title,'Home')
 
-%h1.lobster Thora nora matoka.
+.fold
+  .box
+    %h1.lobster MD
+    %hr
+    %p
+      Say hello 
+      %i.fa.fa-certificate.side-gap.large
+      Book design 
+    %hr
+    .center
+      %a.white.fa.fa-envelope.side-gap{href: 'mailto:marvin@marvindanig.com'}
+      %a.white.fa.fa-twitter.side-gap{href: 'https://twitter.com/marvindanig'}
+      %a.white.fa.fa-github.side-gap{href: 'https://github.com/marvindanig'}
+        
