--- a/app/views/widgets/scripts/_analytics.html.haml
+++ b/app/views/widgets/scripts/_analytics.html.haml
@@ -21,5 +21,6 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-57576349-1', 'auto');
+    ga('require', 'linkid', 'linkid.js');
     ga('send', 'pageview');
 
