--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -5,9 +5,11 @@
     %h1.lobster MD
     %hr
     %p
-      Say hello 
+      %a.white{href: 'mailto:marvin@marvindanig.com'}
+        Say Hello 
       %i.fa.fa-certificate.side-gap.large
-      Book design 
+      %a.white{href: 'https://bubbl.in/marvin-marvin-danig'}
+        Book Design
     %hr
     .center
       %a.white.fa.fa-envelope.side-gap{href: 'mailto:marvin@marvindanig.com'}
