--- a/app/views/widgets/head/_touch_icons_and_favicon.html.haml
+++ b/app/views/widgets/head/_touch_icons_and_favicon.html.haml
@@ -1,4 +1,4 @@
-= favicon_link_tag 'favicon.ico'
+= favicon_link_tag 'favicon.ico?v=2'
 
 / = favicon_link_tag 'touch/apple-touch-icon.png', :rel => 'apple-touch-icon-precomposed apple-touch-icon', :type => 'image/png', :title => "Bubblin"
 
