--- a/app/views/widgets/header/_logo.html.haml
+++ b/app/views/widgets/header/_logo.html.haml
@@ -1,2 +1,2 @@
-%a.element.logo.left.lobster{href: root_path, role: 'Marvin Danig' } MD 
+%a.element.logo.left.lobster.white{href: root_path, role: 'Marvin Danig' } MD 
 
