--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,9 @@
 /* Some fun */
 @import 'scss/animations';
 
+/* Some experiments */
+@import 'scss/experiments';
+
 /* Reusable App Classes */
 @import 'scss/reusable';
 
