--- a/app/views/pages/experiments.html.haml
+++ b/app/views/pages/experiments.html.haml
@@ -1,3 +1,19 @@
 = provide(:title,'Work')
 
-%h1 ka kao
+.container.center
+
+  .wrapper
+    .planets.sun
+      .one.ring
+      .two
+        .ring
+        .seven
+      .three
+        .ring
+        .four
+      .three.slow
+        .ring
+        .five
+      .three.fast
+        .ring
+        .six
