--- a/app/views/widgets/header/_menu.html.haml
+++ b/app/views/widgets/header/_menu.html.haml
@@ -1,11 +1,13 @@
 %ul.horizontal-list.left.navi-menu
   %li
     = link_to 'Resumé', page_path('about'), :class => 'transience'
+  %li
+    = link_to 'Experiments', page_path('experiments'), :class => 'transience'
+
 
 %ul.horizontal-list.right.navi-menu
   %li
     %a.transience{href: 'https://bubbl.in/marvin-marvin-danig' } Books
   %li.hide-on-mobiles
     %a.transience{href: 'http://marvindanig.svbtle.com/' } Essays 
-
   
