--- a/app/views/pages/work.html.haml
+++ b/app/views/pages/work.html.haml
@@ -1,3 +1,8 @@
 = provide(:title,'Work')
 
-%h1 Bebi doo!
+.container.center
+
+  #webgl
+  %script{:src => "https://raw.githubusercontent.com/turban/webgl-earth/master/js/three.min.js"}
+  %script{:src => "https://raw.githubusercontent.com/turban/webgl-earth/master/js/Detector.js"}
+  %script{:src => "https://raw.githubusercontent.com/turban/webgl-earth/master/js/TrackballControls.js"}
