--- a/app/views/widgets/head/_html_head.html.haml
+++ b/app/views/widgets/head/_html_head.html.haml
@@ -38,6 +38,8 @@
   
   = stylesheet_link_tag 'application', media: :all, 'data-turbolinks-track' => true
 
+  = javascript_include_tag 'application'
+
 
   / Javascripts
   = render :partial => 'widgets/scripts/head_javascript_manager'
