--- a/app/views/widgets/header/_menu.html.haml
+++ b/app/views/widgets/header/_menu.html.haml
@@ -1,6 +1,6 @@
 %ul.horizontal-list.left.navi-menu
-  %li
-    = link_to 'Resumé', page_path('about'), :class => 'transience'
+  / %li
+  /   = link_to 'Resumé', page_path('about'), :class => 'transience'
   %li
     = link_to 'Experiments', page_path('experiments'), :class => 'transience'
 
