Reposit the sun

--- a/app/assets/stylesheets/scss/_experiments.scss
+++ b/app/assets/stylesheets/scss/_experiments.scss
@@ -148,8 +148,8 @@
   width: 13.33vw;
   height: 13.33vw;
   border-radius: 13.33vw;
-  top: 28.33vw;
-  left: 40vw;
+  top: 60vh;
+  left: 45vw;
   display: inline-block;
   position: absolute;
   box-shadow: 0 0 120px #f1da36,  0 0 60px #f2ad00,  0 0 10px #c96800,  0 0 200px #feff8f;
