--- a/app/views/widgets/header/_menu.html.haml
+++ b/app/views/widgets/header/_menu.html.haml
@@ -1,13 +1,10 @@
 %ul.horizontal-list.left.navi-menu
-  / %li
-  /   = link_to 'Resumé', page_path('about'), :class => 'transience'
   %li
-    = link_to 'Experiments', page_path('experiments'), :class => 'transience'
-
+    %a.transience{href: 'https://bubbl.in/marvin-marvin-danig' } Resumé
 
 %ul.horizontal-list.right.navi-menu
   %li
     %a.transience{href: 'https://bubbl.in/marvin-marvin-danig' } Books
   %li.hide-on-mobiles
-    %a.transience{href: 'http://marvindanig.svbtle.com/' } Essays 
+    %a.transience{href: 'http://marvindanig.svbtle.com/' } Blog 
   
