Rmeoving unecessary modules/migrations and old style css

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,8 +16,8 @@
 /* Form Style */
 @import 'scss/forms';
 
-/* Buttons */
-@import 'scss/buttons';
+/* Buttons 
+@import 'scss/buttons'; */
 
 /* Fonts */
 @import 'scss/fonts';
@@ -69,3 +69,4 @@
 /* Media Queries */
 @import 'scss/media_queries';
 
+@import 'scss/main'
