--- a/app/views/widgets/header/_menu.html.haml
+++ b/app/views/widgets/header/_menu.html.haml
@@ -1,6 +1,6 @@
 %ul.horizontal-list.left.navi-menu
   %li
-    %a.transience{href: 'https://bubbl.in/marvin-marvin-danig' } Resumé
+    %a.transience{href: 'https://bubbl.in/book/resume-by-marvin-danig/' } Resumé
 
 %ul.horizontal-list.right.navi-menu
   %li
