--- a/app/views/widgets/head/_html_head.html.haml
+++ b/app/views/widgets/head/_html_head.html.haml
@@ -8,26 +8,23 @@
   %meta{ :name => 'viewport', :content => 'width=device-width, initial-scale=1.0,  user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0' }
   %meta{ :name => 'apple-mobile-web-app-capable', :content => 'yes' }
 
-  /[if lte IE 8] <script src="assets/js/ie/html5shiv.js"></script>
-  %link{:href => "//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css", :rel => "stylesheet", :type => "text/css"}/
-  %link{:href => "assets/css/main.css", :rel => "stylesheet"}/
-  /[if lte IE 8] <link rel="stylesheet" href="assets/css/ie8.css" />
-  /[if lte IE 9] <link rel="stylesheet" href="assets/css/ie9.css" />
-
   = csrf_meta_tags
 
   %title
     = full_title(yield(:title))
 
-  = render :partial => 'widgets/head/touch_icons_and_favicon'
+  / = render :partial => 'widgets/head/touch_icons_and_favicon'
 
-  / / CSS  
-  / / TODO: Move this into a style manager.
-  / %link{:href => "https://fonts.googleapis.com/css?family=Raleway", :rel => "stylesheet", :type => "text/css"}/
-  / %link{:href => "https://fonts.googleapis.com/css?family=Tangerine", :rel => "stylesheet", :type => "text/css"}/
-  / %link{:href => "https://fonts.googleapis.com/css?family=Lobster", :rel => "stylesheet", :type => "text/css"}/
-  / %link{:href => "https://fonts.googleapis.com/css?family=Roboto:400,900", :rel => "stylesheet", :type => "text/css"}/
-  / %link{:href => "https://fonts.googleapis.com/css?family=Comfortaa:400,300", :rel => "stylesheet", :type => "text/css"}/
+
+  \/[if lte IE 8]
+  %script{:src => "assets/js/ie/html5shiv.js"}
+  
+  %link{:href => "//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css", :rel => "stylesheet", :type => "text/css"}/
+  
+  / \/[if lte IE 8]
+  / = stylesheet_link_tag 'ie8', media: :all, 'data-turbolinks-track' => true
+  / \/[if lte IE 9]
+  / = stylesheet_link_tag 'ie9', media: :all, 'data-turbolinks-track' => true
   
   = stylesheet_link_tag 'application', media: :all, 'data-turbolinks-track' => true
 
