Cleaning up assets

--- a/app/assets/stylesheets/scss/_initialize.scss
+++ b/app/assets/stylesheets/scss/_initialize.scss
@@ -28,7 +28,7 @@ body {
 /* Anchors */
 
 a {
-  color: #1177FF;
+  color: #FFF;
   text-decoration: none;
   text-rendering: optimizelegibility;
   outline: 0;
