--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,29 +1,16 @@
-/* Getting in Font Face First */
-@import 'scss/proxima';
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900);
+@import url(https://fonts.googleapis.com/css?family=Lobster);
 
-/* Font icons */
-@import 'font-awesome';
-
-/* Initialize Browser Defaults */
 @import 'scss/initialize';
 
-/* Apply if Javascript disabled */
+@import 'scss/colors';
+
+@import 'scss/fonts';
+
 @import 'scss/modernizr';
 
 /* Application Sprites */
 @import 'scss/sprites';
-
-/* Form Style */
-@import 'scss/forms';
-
-/* Buttons 
-@import 'scss/buttons'; */
-
-/* Fonts */
-@import 'scss/fonts';
-
-/* Colors */
-@import 'scss/colors';
 
 /* Corners */
 @import 'scss/cut_corners';
@@ -31,37 +18,18 @@
 /* Shadows */
 @import 'scss/shadows';
 
-/* Some fun */
-@import 'scss/animations';
-
 /* Some experiments */
 @import 'scss/experiments';
 
 /* Reusable App Classes */
 @import 'scss/reusable';
 
-/* Content specific */
-@import 'scss/content';
 
 /* Header */
 @import 'scss/header';
 
-/* @import 'scss/icon';  Pure CSS logo */
-
-/* View specific styles below */
-
-/* Content */
-
-
-
-
-/* Page specific styles above */
-
 /* Footer */
 @import 'scss/footer';
-
-/* Footer */
-@import 'scss/overlay';
 
 /* Helper classes */
 @import 'scss/helper';
@@ -69,4 +37,4 @@
 /* Media Queries */
 @import 'scss/media_queries';
 
-@import 'scss/main'
+@import 'scss/main';
