Getting codepen up there

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -5,7 +5,6 @@
     #bg
     #overlay
     #main
-      / Header
       %header#header
         %h1 Marvin Danig
         %p Developer  •  Designer  •  Manager
@@ -18,8 +17,8 @@
               %a.icon.fa-twitter{:href => "https://twitter.com/marvindanig"}
                 %span.label Twitter
             %li
-              %a.icon.fa-facebook{:href => "https://facebook.com/marvindanig"}
-                %span.label Facebook
+              %a.icon.fa-codepen{:href => "http://codepen.io/marvindanig/"}
+                %span.label Codepen
             %li
               %a.icon.fa-book{:href => "https://bubbl.in/marvin"}
                 %span.label Books
