Getting rid of outline the anchor tags have, fixing the manager to his place

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -7,7 +7,9 @@
     #main
       %header#header
         %h1 Marvin Danig
-        %p Developer  •  Designer  •  Manager
+        %p 
+          Developer  •  Designer  •  
+          %span.strike Manager
         %nav
           %ul
             %li
