Updating title and status

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,4 +1,4 @@
-= provide(:title,"Bird's eye view".html_safe)
+= provide(:title,"Marvin Danig | Birds' eye view".html_safe)
 
 %body.loading
   #wrapper
@@ -9,7 +9,7 @@
         %h1 Marvin Danig
         %p 
           Developer  •  Designer  •  
-          %span.strike Manager
+          %span.strike Available for hire
         %nav
           %ul
             %li
