--- a/config/jekyll/_layouts/default_backup.html
+++ b/config/jekyll/_layouts/default_backup.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Marvin Danig | Thoughts | Code | Design | Node | Ruby on Rails | HTML5 | CSS | Guitar" />
+   <meta name="author" content="Zach Bruhnke" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/blog/css/syntax.css" type="text/css" />
