Iteration 1: blog customization

--- a/config/jekyll/_layouts/default.html
+++ b/config/jekyll/_layouts/default.html
@@ -1,21 +1,294 @@
 <!DOCTYPE html>
+
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+
+
 <head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }}</title>
-   <meta name="author" content="Marvin Danig | Thoughts | Code | Design | Node | Ruby on Rails | HTML5 | CSS | Guitar" />
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>{{ page.title }}</title>
+  <meta name="author" content="Marvin Danig | Thoughts | Code | Design | Node | Ruby on Rails | HTML5 | CSS | Guitar" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-   <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/blog/css/syntax.css" type="text/css" />
+  <!-- syntax highlighting CSS -->
+  <link rel="stylesheet" href="/blog/css/syntax.css" type="text/css" />
 
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/blog/css/screen.css" type="text/css" media="screen, projection" />
+  <!-- Homepage CSS -->
+  <link rel="stylesheet" href="/blog/css/screen.css" type="text/css" media="screen, projection" />
 
-   <!-- Typekit -->
-   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <!--[if lte IE 8]><script src="/blog/js/ie/html5shiv.js"></script><![endif]-->
+  <link rel="stylesheet" href="/blog/css/style/main.css" />
+  <!--[if lte IE 9]><link rel="stylesheet" href="/blog/css/style/ie9.css" /><![endif]-->
+  <!--[if lte IE 8]><link rel="stylesheet" href="/blog/css/style/ie8.css" /><![endif]-->
+
+
 </head>
 <body>
+    <!-- Wrapper -->
+      <div id="wrapper">
+
+        <!-- Header -->
+          <header id="header">
+            <h1><a href="#">Marvin Danig</a></h1>
+            <nav class="links">
+              <ul>
+                <li><a href="#">Code</a></li>
+                <li><a href="#">Design</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Books</a></li>
+                <li><a href="#">Home</a></li>
+              </ul>
+            </nav>
+            <nav class="main">
+              <ul>
+                <li class="search">
+                  <a class="fa-search" href="#search">Search</a>
+                  <form id="search" method="get" action="#">
+                    <input type="text" name="query" placeholder="Search" />
+                  </form>
+                </li>
+                <li class="menu">
+                  <a class="fa-bars" href="#menu">Menu</a>
+                </li>
+              </ul>
+            </nav>
+          </header>
+
+        <!-- Menu -->
+          <section id="menu">
+
+            <!-- Search -->
+              <section>
+                <form class="search" method="get" action="#">
+                  <input type="text" name="query" placeholder="Search" />
+                </form>
+              </section>
+
+            <!-- Links -->
+              <section>
+                <ul class="links">
+                  <li>
+                    <a href="#">
+                      <h3>Lorem ipsum</h3>
+                      <p>Feugiat tempus veroeros dolor</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <h3>Dolor sit amet</h3>
+                      <p>Sed vitae justo condimentum</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <h3>Feugiat veroeros</h3>
+                      <p>Phasellus sed ultricies mi congue</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <h3>Etiam sed consequat</h3>
+                      <p>Porta lectus amet ultricies</p>
+                    </a>
+                  </li>
+                </ul>
+              </section>
+
+            <!-- Actions -->
+              <section>
+                <ul class="actions vertical">
+                  <li><a href="#" class="button big fit">Log In</a></li>
+                </ul>
+              </section>
+
+          </section>
+
+        <!-- Main -->
+          <div id="main">
+
+
+
+
+  
+              {{ content }}
+  
+
+
+
+            <!-- Pagination -->
+              <ul class="actions pagination">
+                <li><a href="" class="disabled button big previous">Previous Page</a></li>
+                <li><a href="#" class="button big next">Next Page</a></li>
+              </ul>
+
+          </div>
+
+        <!-- Sidebar -->
+          <section id="sidebar">
+
+            <!-- Intro -->
+              <section id="intro">
+                <a href="#" class="logo"><img src="blog/images/logo.jpg" alt="" /></a>
+                <header>
+                  <h2>Future Imperfect</h2>
+                  <p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+                </header>
+              </section>
+
+            <!-- Mini Posts -->
+              <section>
+                <div class="mini-posts">
+
+                  <!-- Mini Post -->
+                    <article class="mini-post">
+                      <header>
+                        <h3><a href="#">Vitae sed condimentum</a></h3>
+                        <time class="published" datetime="2015-10-20">October 20, 2015</time>
+                        <a href="#" class="author"><img src="blog/images/avatar.jpg" alt="" /></a>
+                      </header>
+                      <a href="#" class="image"><img src="blog/images/pic04.jpg" alt="" /></a>
+                    </article>
+
+                  <!-- Mini Post -->
+                    <article class="mini-post">
+                      <header>
+                        <h3><a href="#">Rutrum neque accumsan</a></h3>
+                        <time class="published" datetime="2015-10-19">October 19, 2015</time>
+                        <a href="#" class="author"><img src="blog/images/avatar.jpg" alt="" /></a>
+                      </header>
+                      <a href="#" class="image"><img src="blog/images/pic05.jpg" alt="" /></a>
+                    </article>
+
+                  <!-- Mini Post -->
+                    <article class="mini-post">
+                      <header>
+                        <h3><a href="#">Odio congue mattis</a></h3>
+                        <time class="published" datetime="2015-10-18">October 18, 2015</time>
+                        <a href="#" class="author"><img src="blog/images/avatar.jpg" alt="" /></a>
+                      </header>
+                      <a href="#" class="image"><img src="blog/images/pic06.jpg" alt="" /></a>
+                    </article>
+
+                  <!-- Mini Post -->
+                    <article class="mini-post">
+                      <header>
+                        <h3><a href="#">Enim nisl veroeros</a></h3>
+                        <time class="published" datetime="2015-10-17">October 17, 2015</time>
+                        <a href="#" class="author"><img src="blog/images/avatar.jpg" alt="" /></a>
+                      </header>
+                      <a href="#" class="image"><img src="blog/images/pic07.jpg" alt="" /></a>
+                    </article>
+
+                </div>
+              </section>
+
+            <!-- Posts List -->
+              <section>
+                <ul class="posts">
+                  <li>
+                    <article>
+                      <header>
+                        <h3><a href="#">Lorem ipsum fermentum ut nisl vitae</a></h3>
+                        <time class="published" datetime="2015-10-20">October 20, 2015</time>
+                      </header>
+                      <a href="#" class="image"><img src="blog/images/pic08.jpg" alt="" /></a>
+                    </article>
+                  </li>
+                  <li>
+                    <article>
+                      <header>
+                        <h3><a href="#">Convallis maximus nisl mattis nunc id lorem</a></h3>
+                        <time class="published" datetime="2015-10-15">October 15, 2015</time>
+                      </header>
+                      <a href="#" class="image"><img src="blog/images/pic09.jpg" alt="" /></a>
+                    </article>
+                  </li>
+                  <li>
+                    <article>
+                      <header>
+                        <h3><a href="#">Euismod amet placerat vivamus porttitor</a></h3>
+                        <time class="published" datetime="2015-10-10">October 10, 2015</time>
+                      </header>
+                      <a href="#" class="image"><img src="blog/images/pic10.jpg" alt="" /></a>
+                    </article>
+                  </li>
+                  <li>
+                    <article>
+                      <header>
+                        <h3><a href="#">Magna enim accumsan tortor cursus ultricies</a></h3>
+                        <time class="published" datetime="2015-10-08">October 8, 2015</time>
+                      </header>
+                      <a href="#" class="image"><img src="blog/images/pic11.jpg" alt="" /></a>
+                    </article>
+                  </li>
+                  <li>
+                    <article>
+                      <header>
+                        <h3><a href="#">Congue ullam corper lorem ipsum dolor</a></h3>
+                        <time class="published" datetime="2015-10-06">October 7, 2015</time>
+                      </header>
+                      <a href="#" class="image"><img src="blog/images/pic12.jpg" alt="" /></a>
+                    </article>
+                  </li>
+                </ul>
+              </section>
+
+            <!-- About -->
+              <section class="blurb">
+                <h2>About</h2>
+                <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellus sed ultricies.</p>
+                <ul class="actions">
+                  <li><a href="#" class="button">Learn More</a></li>
+                </ul>
+              </section>
+
+            <!-- Footer -->
+              <section id="footer">
+                <ul class="icons">
+                  <li><a href="https://github.com/marvindanig/" class="fa-twitter"><span class="label">Twitter</span></a></li>
+                  <li><a href="https://facebook.com/marvindanig/" class="fa-facebook"><span class="label">Facebook</span></a></li>
+                  <li><a href="https://twitter.com/marvindanig/" class="fa-twitter"><span class="label">Instagram</span></a></li>
+                  <li><a href="#" class="fa-rss"><span class="label">RSS</span></a></li>
+                  <li><a href="mailto: marvin@marvindanig.com" class="fa-envelope"><span class="label">Email</span></a></li>
+                </ul>
+                <p class="copyright">&copy; Marvin Danig. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+              </section>
+
+          </section>
+
+      </div>
+
+    <!-- Scripts -->
+      <script src="/blog/js/jquery.min.js"></script>
+      <script src="/blog/js/skel.min.js"></script>
+      <script src="/blog/js/util.js"></script>
+      <!--[if lte IE 8]><script src="/blog/js/ie/respond.min.js"></script><![endif]-->
+      <script src="/blog/js/main.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- ClickTale Top part -->
 <script type="text/javascript">
@@ -23,44 +296,6 @@ var WRInitTime=(new Date()).getTime();
 </script>
 <!-- ClickTale end of Top part -->
 
-<div class="site">
-  <div class="title">
-    <a href="/blog">Zach Bruhnke</a>
-    <a class="extra" href="/blog">Bloggy</a>
-  </div>
-  
-  {{ content }}
-  
-  <div class="footer">
-    <div class="contact">
-      <p>
-        Zach Bruhnke<br />
-        Works at <a href="http://engineyard.com">EngineYard</a><br />
-        zbruhnke@engineyard.com
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/zbruhnke/">github.com/zbruhnke</a><br />
-        <a href="http://twitter.com/zbruhnke/">twitter.com/zbruhnke</a><br />
-        <a href="http://facebook.com/zbruhnke">facebook.com/zbruhnke</a>
-      </p>
-    </div>
-  </div>
-</div>
-
-<a href="https://github.com/zbruhnke/bloggy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
-
-<!-- ClickTale Bottom part -->
-<div id="ClickTaleDiv" style="display: none;"></div>
-<script type="text/javascript">
-if(document.location.protocol!='https:')
-  document.write(unescape("%3Cscript%20src='http://s.clicktale.net/WRb.js'%20type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-if(typeof ClickTale=='function') ClickTale(206,0.3,"www03");
-</script>
-<!-- ClickTale end of Bottom part -->
 
 <!-- Google Analytics -->
 
