--- a/config/jekyll/_layouts/page.html
+++ b/config/jekyll/_layouts/page.html
@@ -2,9 +2,35 @@
 layout: default
 ---
 <div class="post">
-    <h3><a href="{{ post.url }}">{{ page.title }}</a></h3>
+    <h3></h3>
   
     <div class="body">
-        {{ content }}
+        
     </div>
 </div>
+
+<article class="post">
+  <header>
+    <div class="title">
+      <h2><a href="{{ post.url }}">{{ page.title }}</a></h2>
+      
+      <p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
+    </div>
+    <div class="meta">
+      <time class="published" datetime="2015-11-01">November 1, 2015</time>
+      <a href="#" class="author"><span class="name">Jane Doe</span><img src="blog/images/avatar.jpg" alt="" /></a>
+    </div>
+  </header>
+  <a href="#" class="image featured"><img src="blog/images/pic01.jpg" alt="" /></a>
+  <p>{{ content }}</p>
+  <footer>
+    <ul class="actions">
+      <li><a href="#" class="button big">Continue Reading</a></li>
+    </ul>
+    <ul class="stats">
+      <li><a href="#">General</a></li>
+      <li><a href="#" class="icon fa-heart">28</a></li>
+      <li><a href="#" class="icon fa-comment">128</a></li>
+    </ul>
+  </footer>
+</article>
