Removing bloggy, cleaning up

--- a/app/views/widgets/header/_menu.html.haml
+++ b/app/views/widgets/header/_menu.html.haml
@@ -6,5 +6,5 @@
   %li
     %a.transience{href: 'https://bubbl.in/marvin-marvin-danig' } Books
   %li
-    %a.transience{href: 'http://marvindanig.svbtle.com/' } Blog 
+    %a.transience{href: 'https://marvindanig.wordpress.com/' } Blog 
   
